Removed excessive padding from notifications to ensure that you can click all elements visible beneath the notification

--- a/app/public/stylesheets/index.css
+++ b/app/public/stylesheets/index.css
@@ -20,6 +20,7 @@ body {
 .notification {
   position: fixed;
   padding-top: 60px;
+  padding-left: 0px;
   top: 0;
   right: 0;
   z-index: 100;
